--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -2,14 +2,14 @@
 title: Status indicators
 description:
   Status indicators are an important method of communicating severity level
-  information to users. The shapes and colors communicate severity that enable
+  information to users. Different shapes and colors enable
   users to quickly assess and identify status and respond accordingly.
 ---
 
 <PageDescription>
 
 Status indicators are an important method of communicating severity level
-information to users. The shapes and colors communicate severity that enable
+information to users. Different shapes and colors enable
 users to quickly assess and identify status and respond accordingly.
 
 </PageDescription>
@@ -30,31 +30,26 @@ users to quickly assess and identify status and respond accordingly.
 
 ## Overview
 
-An indicator is a way of making a page element stand out to inform the user that
-there is something special about it that warrants the user’s attention. Often,
-the indicator will denote that there has been some change to the item
-represented by that element.
+An indicator highlights a page element and informs the user of something that needs the user’s attention. Often,
+the indicator will denote that there has been a change to a particular item.
 
-Indicators are used quite frequently to signal validation errors or
-notifications, changes or updates, they can also be used on their own.
-Indicators are visual cues intended to attract users’ attention to a particular
-piece of content or UI element that is dynamic in nature.
+They are frequently used to signal validation errors or notifications, changes, or updates. They can also be used on their own.
+Indicators are visual cues intended to attract the user's attention to a piece of content or UI element that is dynamic in nature.
 
-In this pattern we're going to explore:
+In this pattern we explore:
 
 - Choosing the best status indicators for your context
 - The different status indicator variants
-- What elements they’re comprised of and how each element works
+- What elements they are comprised of and how each element works to communicate
 
 ## Choosing for context
 
-In the UI landscape examples of status indicators are everywhere. However this
+In the UI landscape, examples of status indicators are everywhere. However this
 pattern will focus less on the components or patterns in which indicators tend
-to appear (notifications, inline errors, dashboards etc.) and more on the
-urgency of the communication. For ease of use, status indicators can be
-classified into levels of severity such as high, medium, and low attention. See
-more information on choosing between alias icons and outlined vs. filled icons
-in the [Status shapes](#status-shapes) section below.
+to appear (notifications, inline errors, dashboards, and so on) and more on the
+urgency of the communication. 
+
+For ease of use, status indicators can be classified into levels of severity such as high, medium, and low attention. See more information on choosing between alias icons and outlined versus filled icons in the [Status shapes](#status-shapes) section below.
 
 #### Consolidated statuses
 
@@ -67,14 +62,14 @@ green, yellow, and red, the consolidated indicator is red.
 Don't use status indicators when no user action is necessary and status
 information is not important enough to highlight. Use plain text instead to
 avoid the overuse of status indicators. While we won’t go as far a prescribing a
-maximum number, more than 5 or 6 indicators really starts to tax a user.
+maximum number, more than 5 or 6 indicators begins to tax a user and makes it difficult to focus.
 
 ### High attention
 
-These indicators signal that user action is needed immediately—i.e. there is an
-irregularity in the system, something malfunctioned or a user needs to confirm a
-potentially destructive action. Some examples include Alerts, exceptions,
-confirmations, errors.
+These indicators signal that user action is needed immediately—that is, there is an
+irregularity in the system, something malfunctioned, or a user needs to confirm a
+potentially destructive action. Some examples include alerts, exceptions,
+confirmations, and errors.
 
 {INSERT HIGH ATTENTION TABLE HERE}
 
@@ -90,7 +85,7 @@ indicators.
 
 Use these indicators when something is ready to view, for system feedback, or to
 signify that something has changed since the last interaction. Some examples
-include tooltip triggers that offer explanatory or added information and passive
+include tooltip triggers that offer explanatory or added information, and passive
 notifications.
 
 {INSERT LOW ATTENTION TABLE HERE}
@@ -99,9 +94,8 @@ notifications.
 
 To communicate their message, indicators can take many forms—they're not
 confined to iconography. There are four basic elements that comprise Carbon
-status indicators (we won't get into animation and sound in this pattern). For
-WCAG compliance, at least three of these elements must be present. We should
-spend a little time unpacking these before talking more about the specific
+status indicators. (Note: we won't get into animation and sound in this pattern.) And for
+WCAG compliance, at least three of these elements must be present. Let's look at these elements more closely before examining specific
 status types.
 
 - Symbols
@@ -113,37 +107,34 @@ status types.
 
 Icons are visual symbols used to represent ideas, objects, or actions. Ideally,
 they communicate messages at a glance, afford interactivity, and draw attention
-to important information. For example: Exclamation point for warning, checkmark
-for success, question mark for help or unknown.
+to important information. For example, using exclamation points for warnings, checkmarks
+for success, and question marks for help or unknown.
 
-In an attempt to standardize the icons that are used most widely in IBM product,
-for the most part, we’ve included only the most universally recognized icons.
+To standardize the icons that are used most widely in IBM product, we’ve included only the most universally recognized icons.
 Certain products may have certain modifications or most robust sets.
 
 <Row>
 <Column colLg={8}>
 
-![Example of common status icons.](./images/status_indicator_1.png)
+![Examples of common status icons.](./images/status_indicator_1.png)
 
-<Caption>Example of some of the most common status symbols</Caption>
+<Caption>Examples of some of the most common status symbols</Caption>
 
 </Column>
 </Row>
 
 ### Status shapes
 
-In this context, shapes refer to geometric figures like squares, circles,
-rectangles, etc.— as they are instantly readable even at small sizes. These
-shapes have strong visual associations that every designer should know how to
-apply to help their users succeed in using their product flows. For instance,
-shapes with straight lines and 90 degree angles usually convey structure and
+In this context, shapes refer to geometric figures like squares, circles, rectangles, 
+and so on, as they are instantly readable even at small sizes. These shapes have strong 
+visual associations that can be applied to help users succeed in using their product flows. 
+For instance, shapes with straight lines and 90 degree angles usually convey structure and
 order—like the grid. While shapes with curves are friendlier and symbolize
-continuity and connection. Not to mention cultural associations connected with
-traffic and wayfinding (i.e. hexagon means stop, upside triangle means yield
-etc.)
+continuity and connection. 
 
-Using shapes incorrectly can disturb learned recognition patterns and confuse
-users, possibly hurting their overall experience.
+There can also be cultural associations connected with shapes. For example in traffic and 
+wayfinding, hexagons mean stop, and upside triangles means yield. Using shapes incorrectly 
+can disturb learned recognition patterns and confuse users, possibly hurting their overall experience.
 
 <Row>
 <Column colLg={8}>
@@ -155,58 +146,60 @@ users, possibly hurting their overall experience.
 </Column>
 </Row>
 
-#### Outline vs filled shapes
+#### Outline versus filled shapes
 
-We offer two options that can be flexible for usage based on the teams'
+We offer two options that can be flexible for usage based on your team's
 preference. Keep in mind that filled icons are more visible and tend to carry
-more weight—as such they’re often used for high attention statuses. Outlined
+more weight, therefore they’re often used for high attention statuses. Outlined
 icons are more delicate and not as readily scannable.
 
 In addition, the more line work an icon has—and the more breaks in those
 lines—the more difficult it is to use a filled icon. For this reason, some
-product teams may occasionally mix in an outline icon with a filled icon—that’s
-OK—but for the most part, designers should try to be consistent throughout the
-product or application. In general though, designers should avoid mixing
-outilned and filled indicators on the same page.
+product teams may occasionally mix in an outline icon with a filled icon. This is okay 
+but for the most part, designers should try to be consistent throughout the
+product or application. At the very least, designers should avoid mixing
+outlined and filled indicators on the same page.
 
 #### Alias status icons
 
 In several cases, we offer multiple shape options for one type of status
-indicator. For example, ‘warning.’ ‘help’ and ‘information’ status icons have
+indicator. For example, ‘warning’ ‘help’ and ‘information’ status icons have
 multiple variants to convey similar or exactly the same information. Often
-times, users of certain products have grown accustom to say, a hexagon instead
-of a circle to convey a critical warning. Or a team just wants to go the extra
+times, users of certain products have grown accustomed to say, a hexagon instead
+of a circle to convey a critical warning. Or a team perhaps wants to go the extra
 mile and offer yet another differentiator for accessibility. Although
-consistency is always the goal, there’s no need to prevent some differentiation
-to accomodate user preferences. Whichever style you choose, avoid mixing
+consistency is always the goal, there’s no need to avoid differentiation
+to accomodate user preferences. Whichever style you choose however, avoid mixing
 throughout the UI.
 
 If an alias that your product frequently uses has been removed from the set and
-you can make a case for the importance of including it here please let us know.
+you can make a case for the importance of including it here, please let us know.
 
-### Status colors
+### Status palette
 
-This palette is only for added contrast accessibility when using yellows and
-oranges. It’s not a part of the IBM masterbrand palette and it’s also not
-included in the v2 color release (i.e. it’s not in ASE, Sketch kit palettes
-etc.) because it’s for very selective use in data visualizations and certain
-status indicators. Do not use this palette in any other manor in your layouts.
+Status indicator colors are used to reflect status. Typically, red represents 
+danger or error, orange represents a serious warning, yellow represents a regular 
+warning, green represents normal or success, and blue represents passive 
+notifications, usually involving additional information and workflow progress. 
+We’ve also included gray and purple to add more depth to the system. Gray 
+indicates drafts or jobs that haven’t been started, and purple indicates outliers 
+or undefined statuses. 
 
 <ColorPalette type="alert" />
 
 #### Extended status palettes
 
 This palette is only for added contrast accessibility when using yellows and
-oranges. It’s not a part of the IBM masterbrand palette and it’s also not
-included in the v2 color release (i.e. it’s not in ASE, Sketch kit palettes
-etc.) because it’s for very selective use in data visualizations and certain
-status indicators. Do not use this palette in any other manor in your layouts.
+oranges. It’s not a part of the IBM brand palette and it’s also not
+included in the v2 color release (that is, it’s not in ASE, Sketch kit palettes, 
+and so on) because it’s for very selective use in data visualizations and certain
+status indicators. Do not use this palette in any other manner in your layouts.
 
 {Insert extended yellow and orange palette component}
 
 ## Variants
 
-There are at least three possible ways to implement status indicators:
+There are at least four possible ways to implement status indicators:
 
 - Full status indicators
 - Badge indicators (with and without numbers)
@@ -215,16 +208,16 @@ There are at least three possible ways to implement status indicators:
 
 | Variant                                  | Usage                                                                                                                                                                                   | Context                                                                                                                                                                                                                        |
 | ---------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Full status indicators                   | Because they require an icon, a shape, a meaningful color and a descriptive inline label—they’re used any time the layout offers ample space and the content requires maximum attention | Icon indicators are widely used in [Notifications](/components/notification/usage), [Progress Indicators](/components/progress-indicator/usage), [Data tables](/components/data-table/usage), task lists and dashboard widgets |
-| Badge status indicators (with number)    | Useful when a count of new or updated items is available, and it is important for the user to know the number of updates                                                                | Most often used in notification panes in the header (used in conjuntion with avatars or icons)                                                                                                                                 |
-| Badge status indicators (without number) | Useful when new or updated items are available and the number of notifications is unknown or irrelevant to the user. The dot badge is also more compact and discrete                    | Most often used in notification panes in the header (used in conjuntion with avatars or icons)                                                                                                                                 |
-| Shape status indicators                  | Useful in smaller spaces or when users need to scan large amount of data                                                                                                                | Most often used in, lists, dashboards, data tables, data visualizations and network diagrams                                                                                                                                   |
-| Differential status indicators           | Useful when users are monitoring differentials in large lists of statistics and anything other than type would be too obtrusive                                                         | Most often used financial dashboards for highlighting deltas or other types of data visualizations                                                                                                                             |
+| Full status indicators                   | Used any time the layout offers ample space and the content requires maximum attention. They require an icon, a shape, a meaningful color and a descriptive inline label.  | Icon indicators are widely used in [Notifications](/components/notification/usage), [Progress indicators](/components/progress-indicator/usage), [Data tables](/components/data-table/usage), task lists and dashboard widgets. |
+| Badge status indicators (with number)    | Useful when a count of new or updated items is available, and it is important for the user to know the number of updates.                                                                | Most often used in notification panes in the header, and used in conjunction with avatars or icons.                                                                                                                                 |
+| Badge status indicators (without number) | Useful when new or updated items are available and the number of notifications is unknown or irrelevant to the user. The dot badge is also more compact and discrete.                    | Most often used in notification panes in the header, and used in conjuntion with avatars or icons.                                                                                                                                 |
+| Shape status indicators                  | Useful in smaller spaces or when users need to scan large amount of data.                                                                                                                | Most often used in lists, dashboards, data tables, data visualizations, and network diagrams.                                                                                                                                   |
+| Differential status indicators           | Useful when users are monitoring differentials in large lists of statistics and when anything other than type would be too obtrusive.                                                         | Most often used in financial dashboards for highlighting deltas or other types of data visualizations.                                                                                                                             |
 
 ### Anatomy
 
 Like a button, a status indicator’s text label is the most important element, as
-it communicates progress. By default Carbon uses sentence case for all button
+it communicates progress. By default, Carbon uses sentence case for all button
 labels.
 
 Text labels, column labels (or a legend, when inline labels aren’t an option)
@@ -268,7 +261,7 @@ A. Text label <br /> B. Shape <br /> C. Color
 </Row>
 
 <Caption>
-  *Differential indicators must have either a ‘+’ or ‘-’ sign, a caret or an
+  *Differential indicators must have either a ‘+’ or ‘-’ sign, a caret, or an
   arrow icon to indicate positive or negative values.
 </Caption>
 
@@ -276,11 +269,11 @@ A. Text label <br /> B. Shape <br /> C. Color
 
 ### Full status indicators
 
-Full status indicators require an icon, a shape, a meaningful color and a
+Full status indicators require an icon, a shape, a meaningful color, and a
 descriptive label. Easily recognizable icons can make very effective
-communication tools and greatly improve scanability,especially with large
-amounts of content. Icon indicators are widely used in Notifications, Progress
-Indicators, Data tables, task lists and dashboard widgets.
+communication tools and greatly improve scannability, especially with large
+amounts of content. Icon indicators are widely used in notifications, progress
+indicators, data tables, task lists and dashboard widgets.
 
 <Row>
 <Column colLg={8}>
@@ -301,19 +294,19 @@ indicators as well because they are associated with a UI element or with a piece
 of content. As such they should be shown in close proximity to that element.
 
 There are also cases, especially in data tables and lists, where the column
-heading or row label may provide additive context to the inline label. Also,
-when very common ‘stop light’ associations are present (see below), it may not
+heading or row label may provide context that is additive to the inline label. 
+When very common ‘stop light’ associations are present, as in the following example, it may not
 be necessary to explicitly label an icon as ‘warning,’ or ‘stable’ — as these
 interpretations are widely understood in product. However it is good practice to
 clarify the status intention in the text label.
 
 <DoDontRow>
-  <DoDont caption="Do left-align icons and type in lists, data tables regardless of whether you’re using the responsive grid or spacers." colLg={6}>
+  <DoDont caption="Do left align icons and type in lists and data tables, regardless of whether you’re using the responsive grid or spacers." colLg={6}>
 
 ![Aligned status indicator icons.](images/status_indicator_5.png)
 
   </DoDont>
-  <DoDont type="dont" colLg={6} caption="Do not push icons out of alignment with label length; in this case, where the status indicators are flush right, the two digit labels are pushing the icons out of alignment.">
+  <DoDont type="dont" colLg={6} caption="Do not push icons out of alignment with label length. In this case, where the status indicators are flush right, the two digit labels are pushing the icons out of alignment.">
 
 ![Misaligned status indicator icons](images/status_indicator_6.png)
 
@@ -322,9 +315,9 @@ clarify the status intention in the text label.
 
 ### Badge status indicators
 
-Badge status alerts the user that something is new or updated. A badge status is
+Badge status indicators let the user know that something is new or updated. A badge status is
 displayed over a ghost icon button, usually in the header, to indicate an active
-notification, and is cleared after the user acknowledges the notification.
+notification and is cleared after the user acknowledges the notification.
 Depending on your use case, the icon button can open a new page or launch a
 modal, pane, or flyout.
 
@@ -343,7 +336,7 @@ modal, pane, or flyout.
 #### Badge status with number
 
 Numbers are used in conjunction with a badge status when a count of new or
-updated items is available—and it is important for the user to know the number
+updated items is available and it's important for the user to know the number
 of updates.
 
 #### Badge status without number
@@ -356,16 +349,17 @@ attention to the icon button.
 ### Shape status indicators
 
 Shape indicators combine color shape and text to create a standard and
-consistent way to indicate the status of a device, feature or version—icons are
+consistent way to indicate the status of a device, feature, or version. Icons are
 not present. These shapes are also seen in certain diagrams and data
-visualizations (e.g. network diagrams). The shapes are only the most basic
-geometries, derived from the larger icon containers, so they can be easily
-discerned at small sizes. Shape indicators are not available in outline because
-they are so small. The only situation in which you would use an outline is to
+visualizations, for example network diagrams. 
+
+The shapes are only the most basic geometries, derived from the larger icon containers, 
+so they can be easily discerned at small sizes. Shape indicators are not available in 
+outline because they are so small. The only situation in which you would use an outline is to
 ensure contrast accessibility for yellows.
 
-The table below is a first attempt to establish a standard lexicon for symbol
-indicator within IBM product.
+The table below is a first pass at establishing a standard lexicon for symbol
+indicators within IBM product.
 
 {INSERT SYMBOL STATUS TABLE HERE}
 
@@ -374,10 +368,10 @@ indicator within IBM product.
 Shape indicators are also ‘contextual’ status indicators. Like the status icons
 above, assets have been created for the shape indicators that take into account
 optical alignment. Do not attempt to create these shapes yourself. Use the
-approved shape indicator provided to you in the icon library.
+approved shape indicator provided for you in the icon library.
 
 As with the icons, choose the appropriate canvas size depending on the size of
-the status label it pairs with. 16px symbols are optimized to feel balanced when
+the status label with which it is paired. 16px symbols are optimized to feel balanced when
 paired with both 12px and 14px IBM Plex. Since shape indicators are most often
 reserved for small usage scenarios in product, we would advise you to use full
 status indicators with 16px IBM Plex.
@@ -399,14 +393,14 @@ status indicators with 16px IBM Plex.
 
 ![Example of a contextual shape status indicator](./images/status_indicator_9.png)
 
-<Caption>Here the status label is directly next to the shape</Caption>
+<Caption>Example of the status label directly next to the shape</Caption>
 
 </Column>
 </Row>
 
 #### Legends
 
-Because shape indicators don’t have the added recognition of an icon—it’s even
+Because shape indicators don’t have the added recognition of an icon, it’s even
 more important that they are paired with a status label. Alternately, the
 designer can provide the user with a legend if a status label isn’t an option.
 
@@ -416,7 +410,7 @@ designer can provide the user with a legend if a status label isn’t an option.
 ![Example of a legend paired with a shape indicator](./images/status_indicator_10.png)
 
 <Caption>
-  Here the status symbol indicator depends on the legend at the top of the page
+  Example where the status symbol indicator depends on the legend at the top of the page
 </Caption>
 
 </Column>
@@ -445,15 +439,15 @@ caption="Do not place shape indicators after the labels to avoid pushing them ou
 <DoDontRow>
 <DoDont
 type="do"
-caption="Do use shape, color and status labels to improve scanability.">
+caption="Do use shape, color, and status labels to improve scannability.">
 
-![Do use shape, color and status labels to improve scanability.](./images/status_indicator_13.png)
+![Do use shape, color, and status labels to improve scannability.](./images/status_indicator_13.png)
 
 </DoDont>
 
 <DoDont
 type="dont"
-caption="Avoid using only color and status labels to differentiate your content.s">
+caption="Avoid using only color and status labels to differentiate your content.">
 
 ![Avoid using only color and status labels to differentiate your content.](./images/status_indicator_14.png)
 
@@ -463,14 +457,14 @@ caption="Avoid using only color and status labels to differentiate your content.
 ### Differential status indicators
 
 Differential status indicators often help users understand the movement or
-changes of information. They are especially useful when users are monitoring
+changes in information. They are especially useful when users are monitoring
 differences in large lists of statistics and anything other than type would be
 too obtrusive. Examples include the common convention of color-coding stock
 symbols in an investment account if their price has changed substantially.
 Designers also rely on them to highlight deltas in data visualizations.
 
 Although typographic indicators can be used without an icon as long as a minus
-or a plus sign is used—they are most often paired with arrow or caret icons in
+or a plus sign is used, they are most often paired with arrow or caret icons in
 our system.
 
 <Row>
@@ -483,9 +477,9 @@ our system.
 
 #### Color
 
-Since differential indicators are either displaying a positive or a negative
+Differential indicators are either displaying a positive or a negative
 value. Color is optional in these situations as long as the value has either a
-‘+’ or ‘-’ in front of it, a chevron icon or an arrow icon. Unless the data
+‘+’ or ‘-’ in front of it, a chevron icon, or an arrow icon. Unless the data
 involves temperature, positive values are represented by the green spectrum and
 negative values are represented by the red spectrum.
 
@@ -503,11 +497,11 @@ negative values are represented by the red spectrum.
 
 ## Accessibility
 
-Accessible design not only helps users with disabilities; it provides better
+Accessible design not only helps users with disabilities, it provides better
 user experiences for everyone. The most common form of color blindness is
 red/green color blindness. The inability for some users to distinguish between
 red and green means that products cannot simply rely on color to show status. As
-a result, the status system relies on 3 key elements; color, shape, and symbol.
+a result, the status system relies on three key elements; color, shape, and symbol.
 
 For example, the critical icon is not just “red”, it is the sum of the following
 elements.
@@ -536,7 +530,7 @@ Some users with disabilities need more time to read or interact with messages
 and timed toasts may not provide sufficient time. WCAG 2.1 success criterion
 2.2.4 (AAA)
 
-#### Users should be able to manage or limit noncritical notifications.
+#### Users should be able to manage or limit non-critical notifications.
 
 This gives users the control to reduce the number of distractions or disruptions
 they receive, which is particularly helpful for users with cognitive
@@ -575,9 +569,7 @@ limitations. WCAG 2.1 success criterion 2.2.3 (AAA)
 - Miklos Philips,
   [A comprehensive guide to notification design](https://uxdesign.cc/a-comprehensive-guide-to-notification-design-2fff67f08b7a),
   (UX Planet, 2020)
-- Kim Salazar,
-  [Indicators, Validations, and Notifications: Pick the Correct Communication Option](https://www.nngroup.com/articles/indicators-validations-notifications/),
-  (Nielsen Norman Group, 2015)
+- Kim Salazar, [Indicators, Validations, and Notifications: Pick the Correct Communication Option](https://www.nngroup.com/articles/indicators-validations-notifications/), (Nielsen Norman Group, 2015)
 
 ## Feedback
 
